<resources>
    <string name="app_name">SeniorProject - LMS</string>
    <string name="add_exam">Add Exam</string>
    <string name="lectures">Lectures</string>
    <string name="exams">Exams</string>
    <string name="please_enter_lecture_title">Please enter lecture title</string>
    <string name="please_enter_lecture_link">Please enter lecture link</string>
    <string name="save">Save</string>
    <string name="department">Department</string>
    <string name="grades">Grades</string>
    <string name="instructors">Instructors</string>
    <string name="courses">Courses</string>
    <string name="students">Students</string>
    <string name="department_name">Department Name</string>
    <string name="grade_name">Grade Name</string>
    <string name="instructor_name">Instructor Name</string>
    <string name="instructor_address">Instructor Address</string>
    <string name="instructor_phone">Instructor phone</string>
    <string name="instructor_password">Instructor Password</string>
    <string name="instructor_email">Instructor Email</string>
    <string name="course_name">Course Name</string>
    <string name="course_description">Course Description</string>
    <string name="student_name">Student Name</string>
    <string name="student_address">Student Address</string>
    <string name="add_grade">Add Grade</string>
    <string name="student_password">Student Password</string>
    <string name="student_phone">Student Phone</string>
    <string name="student_email">Student Email</string>
    <string name="add_lecture">Add Lecture</string>
    <string name="correct_exam">Correct Exam</string>
    <string name="students_profile">Students Profile</string>
    <string name="lecture_title">Lecture title</string>
    <string name="lecture_link">Lecture link</string>
    <string name="exam_duration">Exam duration</string>
    <string name="proceed_to_questions">Proceed to questions</string>
    <string name="submit_exam">Submit Exam</string>
    <string name="next_question">Next Question</string>
    <string name="question">Question</string>
    <string name="option_3">Option 3</string>
    <string name="option_2">Option 2</string>
    <string name="option_1">Option 1</string>
    <string name="exam_score">Exam score</string>
    <string name="email">Email</string>
    <string name="login_as_admin">Login as admin</string>
    <string name="login">Login</string>
    <string name="delete">Delete</string>
    <string name="admin_portal">Admin Portal</string>
    <string name="instructor_portal">Instructor Portal</string>
    <string name="student_portal">Student Portal</string>
    <string name="answer">Answer</string>
</resources>