<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activity.admin.AdminHomeActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_grades"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="openActivity"
        style="@style/cardStyle">
        <TextView
            style="@style/cardTextStyle"
            android:text="@string/grades" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_instructors"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="openActivity"
        style="@style/cardStyle">
        <TextView
            style="@style/cardTextStyle"
            android:text="@string/instructors" />
    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_courses"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="openActivity"
        style="@style/cardStyle">
        <TextView
            style="@style/cardTextStyle"
            android:text="@string/courses" />
    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_students"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="openActivity"
        style="@style/cardStyle">
        <TextView
            style="@style/cardTextStyle"
            android:text="@string/students" />
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>