<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activity.instructor.InstructorHomeActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/add_lecture"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="openActivity"
        style="@style/cardStyle">
        <TextView
            style="@style/cardTextStyle"
            android:text="@string/add_lecture" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/add_exam"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="openActivity"
        style="@style/cardStyle">
        <TextView
            style="@style/cardTextStyle"
            android:text="@string/add_exam" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/correct_exam"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="openActivity"
        style="@style/cardStyle">
        <TextView
            style="@style/cardTextStyle"
            android:text="@string/correct_exam" />
    </androidx.cardview.widget.CardView>

</LinearLayout>