<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activity.instructor.InstructorLoginActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/marginRight"
        android:background="#FFFFFF"
        android:src="@mipmap/artif_intell"
        app:shapeAppearanceOverlay="@style/roundedImage" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/instructor_portal"
        />

    <TextView
        android:id="@+id/admin_login_textview_error"
        android:text="Invalid email or password"
        android:visibility="invisible"
        style="@style/txtViewError"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:hint="@string/email"
        app:errorEnabled="true"
        style="@style/textInputLayoutStyle">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_instructor_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:hint="Password"
        app:errorEnabled="true"
        style="@style/textInputLayoutStyle">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_instructor_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        style="@style/buttonStyle"
        android:onClick="loginInstructor"
        android:text="@string/login" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="@dimen/marginTop"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:cornerRadius="20dp"
        android:onClick="openAdminLogin"
        android:text="@string/login_as_admin" />

</LinearLayout>