<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activity.admin.student.StudentDetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="200dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:src="@drawable/man"
                android:layout_margin="@dimen/marginRight"
                android:visibility="gone"
                android:layout_height="200dp" />

            <Spinner
                style="@style/textInputLayoutStyle"
                android:padding="28dp"
                android:id="@+id/spinner_student_details_grade" />

            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/student_name"
                style="@style/textInputLayoutStyle">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_student_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/student_address"
                style="@style/textInputLayoutStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_student_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/student_email"
                style="@style/textInputLayoutStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_student_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/student_password"
                style="@style/textInputLayoutStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_student_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/student_phone"
                style="@style/textInputLayoutStyle">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_student_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </ScrollView>
</LinearLayout>