<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activity.admin.AdminLoginActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/marginRight"
        android:background="#FFFFFF"
        android:src="@mipmap/artif_intell"
        app:shapeAppearanceOverlay="@style/roundedImage" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/admin_portal"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:hint="@string/email"
        app:errorEnabled="true"
        style="@style/textInputLayoutStyle">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_admin_login_email"
            android:background="#fff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:hint="Password"
        app:errorEnabled="true"
        style="@style/textInputLayoutStyle">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_admin_login_password"
            android:background="#fff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        style="@style/buttonStyle"
        android:onClick="loginAdmin"
        android:text="@string/login" />

</LinearLayout>